--- a/source/sass/foto/prewiew-min.scss
+++ b/source/sass/foto/prewiew-min.scss
@@ -1,6 +1,5 @@
 .prewiew-min {
   margin: 0 auto;
-  width: 320px;
   background-color: burlywood;
 }
 
@@ -8,7 +7,8 @@
   height: 290px;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: bottom;
+  background-size: cover;
+  background-position: 25% 90%;
   background-repeat: no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -34,7 +34,7 @@
 
   position: absolute;
   top: 0;
-  left: 0;
+  left: calc(50% - 160px);
 
   background-image: url("../img/bg-intro-triangle-mobile.svg");
   background-repeat: no-repeat;
@@ -47,15 +47,13 @@
 //------------------styles-for-tablet------------------------//
 
 @media (min-width: $tablet-width) {
-  .prewiew-min {
-    width: 768px;
-  }
 
   .prewiew-min__landscape {
     height: 290px;
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-position: bottom;
+    background-size: cover;
+    background-position: 25% 90%;
     background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -74,25 +72,30 @@
 
     position: absolute;
     top: 0;
-    left: 0;
+    left: calc(50% - 384px);
 
     background-image: url("../img/bg-intro-triangle-tablet.svg");
     background-repeat: no-repeat;
+  }
+
+  .prewiew-min__image {
+    margin-top: 52px;
+
+    width: 458px;
+    height: 78px;
   }
 }
 
 //--------------------------styles-for-desktop----------------------//
 
 @media (min-width: $desktop-width) {
-  .prewiew-min {
-    width: 1200px;
-  }
 
   .prewiew-min__landscape {
     height: 301px;
 
     background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-position: bottom;
+    background-size: cover;
+    background-position: 25% 100%;
     background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -111,7 +114,7 @@
 
     position: absolute;
     top: 0;
-    left: 0;
+    left: calc(50% - 600px);
 
     background-image: url("../img/bg-intro-triangle-desktop.svg");
     background-repeat: no-repeat;
