--- a/source/sass/index/prewiew.scss
+++ b/source/sass/index/prewiew.scss
@@ -1,5 +1,5 @@
 .prewiew {
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -7,7 +7,8 @@
   height: 389px;
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: bottom;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -20,29 +21,29 @@
 }
 
 @media (min-width: $tablet-width) {
-  .prewiew {
-    width: 768px;
-    margin: 0 auto;
-  }
 
   .prewiew__landscape {
     height: 518px;
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-position: bottom;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
     }
   }
+
+  .prewiew__image {
+    margin-top: 75px;
+
+    width: 460px;
+    height: 350px;
+  }
 }
 
 @media (min-width: $desktop-width) {
-  .prewiew {
-    width: 1200px;
-    margin: 0 auto;
-  }
 
   .prewiew__landscape {
     height: 518px;
