--- a/source/sass/index/advantages.scss
+++ b/source/sass/index/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
 
   margin-top: 65px;
@@ -7,19 +7,20 @@
 
 .advantages__title {
   @include title-style;
-  margin-top: 45px;
-  margin-left: 30px;
-  margin-right: 30px;
+
+  margin: 0 auto;
+  width: 260px;
 }
 
 .advantages__main-description {
   line-height: 26px;
   color: $dark-grey;
 
+  margin: 0 auto;
   margin-top: 28px;
   margin-bottom: 25px;
-  margin-left: 30px;
-  margin-right: 30px;
+
+  width: 260px;
 }
 
 .advantages__main-list {
@@ -32,8 +33,8 @@
     height: 37px;
 
     position: absolute;
-    top: -20px;
-    left: 0;
+    top: -22px;
+    left: calc(50% - 160px);
 
     background-image: url("../img/bg-triangle.svg");
     background-position: 0 0;
@@ -124,13 +125,13 @@
 
   &::before {
     position: absolute;
-    left: 116px;
+    left: calc(50% + 15px);
     top: 18px;
   }
 
   &::after {
     position: absolute;
-    left: 157px;
+    left: calc(50% - 25px);
     top: 18px;
   }
 
@@ -144,8 +145,9 @@
 }
 
 .advantages__expl {
-  margin-top: 0;
-  margin-bottom: 0;
+  width: 260px;
+
+  margin: 0 auto;
   padding-bottom: 43px;
 
   &--dark-grey {
@@ -156,24 +158,38 @@
   }
 }
 
-.advantages__image {
+.advantages__image-wrapper {
+  height: 260px;
+  margin: 0;
 
+  background-color: rgb(238, 238, 238);
+
+  &--bridge {
+    background-color: rgb(214, 234, 240);
+  }
+}
+
+.advantages__image {
+  height: 260px;
 }
 
 .advantages__list-description {
   @include list-style;
   margin-bottom: 35px;
-
-  text-align: start;
 }
 
 .advantages__item-description {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+
+  width: 260px;
   position: relative;
 
   padding-left: 70px;
   padding-right: 20px;
+
+  text-align: start;
 
   svg {
     position: absolute;
@@ -215,6 +231,8 @@
 
 .advantages__expl-description {
   @include font-description;
+
+  width: 260px;
   margin: 0;
   padding-top: 13px;
 }
@@ -229,8 +247,6 @@
 
 @media (min-width: $tablet-width) {
   .advantages {
-    width: 768px;
-    margin: 0 auto;
     margin-top: 108px;
   }
 
@@ -398,9 +414,6 @@
 //------------------------------styles-for-desctop
 
 @media (min-width: $desktop-width) {
-  .advantages {
-    width: 1200px;
-  }
 
   .advantages__description {
     border: none;
