--- a/source/sass/foto/gallery.scss
+++ b/source/sass/foto/gallery.scss
@@ -1,43 +1,47 @@
 .gallery {
-  width: 320px;
   margin: 0 auto;
-}
-
-.gallery__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .gallery__title {
   @include title-style;
-  margin-top: 68px;
-  margin-bottom: 30px;
+  margin-top: 65px;
+  margin-bottom: 26px;
 }
 
 .gallery__description {
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 31px;
+  width: 280px;
+
+  margin: 0 auto;
+  margin-bottom: 28px;
 }
 
 .gallery__list {
   @include list-style;
+  width: 100%;
+  margin: 0 auto;
 
   text-align: start;
-
-  margin: 0 auto;
 }
 
 .gallery__item {
-  padding-top: 22px;
-  padding-bottom: 5px;
-
+  margin: 0 auto;
   border-bottom: 1px solid $form-grey;
 
   &:first-child {
+
     border-top: 1px solid $form-grey;
     }
   }
+
+.gallery__wrapper {
+  margin: 0 auto;
+  padding-top: 21px;
+  padding-bottom: 17px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  width: 280px;
+}
 
 .gallery__image {
 
@@ -60,35 +64,37 @@
 
 .gallery__signature {
   margin: 0;
+
+  text-transform: none;
+  color: $dark-grey;
+}
+
+.gallery__autor-signature {
+  margin: 0;
 }
 
 .gallery__item-title {
   margin: 0;
-  margin-top: 5px;
+  margin-top: 10px;
 
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
 }
 
-.gallery__signature {
-  text-transform: none;
-  color: $dark-grey;
-}
-
 .gallery__likes-wrapper {
   display: flex;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .gallery__icon-likes {
   opacity: 0.3;
 
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .gallery__likes {
-  margin-bottom: 5px;
+  margin-top: 2px;
 }
 
 //--------------------styles-for-tablet---------------
@@ -97,11 +103,14 @@
   .gallery {
     width: $tablet-width;
     margin: 0 auto;
+
   }
 
   .gallery__title {
     font-size: 30px;
-    margin-top: 120px;
+
+    margin-top: 130px;
+    margin-bottom: 32px;
   }
 
   .gallery__description {
@@ -113,15 +122,14 @@
 
   .gallery__list {
     display: flex;
+    justify-content: start;
     flex-wrap: wrap;
 
-    margin-left: 60px;
-    margin-right: 60px;
+    width: 648px;
   }
 
   .gallery__item {
-    padding: 0;
-
+    margin: 0;
     border: none;
 
     &:first-child {
@@ -131,11 +139,12 @@
   }
 
   .gallery__wrapper {
-    margin: 0;
+    margin: 0 auto;
+    padding: 0;
     width: 324px;
 
     &--first {
-      width: 648px;
+       width: 648px;
     }
   }
 
@@ -143,7 +152,7 @@
     width: 324px;
 
     &--first {
-      width: 100%;
+      width: 648px;
       height: 400px;
     }
   }
@@ -162,10 +171,6 @@
   .gallery__signature-wrapper {
     margin-top: 10px;
     margin-bottom: 15px;
-  }
-
-  .gallery__autor-signature {
-    margin: 0;
   }
 
   .gallery__likes-wrapper {
