--- a/source/sass/foto/gallery.scss
+++ b/source/sass/foto/gallery.scss
@@ -28,7 +28,6 @@
   border-bottom: 1px solid $form-grey;
 
   &:first-child {
-
     border-top: 1px solid $form-grey;
     }
   }
@@ -44,6 +43,7 @@
 }
 
 .gallery__image {
+  object-fit: cover;
 
   &--spaces {
     background-color: goldenrod;
@@ -152,7 +152,7 @@
     width: 324px;
 
     &--first {
-      width: 648px;
+      width: 100%;
       height: 400px;
     }
   }
