--- a/source/sass/index/prewiew.scss
+++ b/source/sass/index/prewiew.scss
@@ -30,9 +30,10 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    // @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    //   background-image: url("../img/bg-back-tablet@2x.jpg");
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
     }
+  }
 
   .prewiew__image {
     margin-top: 75px;
