--- a/source/sass/form/form.scss
+++ b/source/sass/form/form.scss
@@ -41,11 +41,25 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  position: relative;
+
   @include list-style;
 
   &--radio {
     margin-top: 43px;
     margin-bottom: 22px;
+
+    &::after {
+      content: "";
+
+      position: absolute;
+      width: 56px;
+      height: 56px;
+
+      border-radius: 50%;
+      background-color: $form-grey;
+    }
   }
 
   &--checkbox {
