--- a/source/sass/general/body.scss
+++ b/source/sass/general/body.scss
@@ -11,6 +11,7 @@ body {
   text-align: center;
 
   background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 15px 5px rgba(0, 1, 1, 0.2);
 }
 
 .visually-hidden:not(:focus):not(:active) {
