--- a/source/sass/form/form.scss
+++ b/source/sass/form/form.scss
@@ -20,6 +20,7 @@
 
 .form__wrapper {
   width: 320px;
+  padding-top: 20px;
   border-top: 1px solid $form-grey;
 }
 
@@ -48,18 +49,7 @@
 
   &--radio {
     margin-top: 43px;
-    margin-bottom: 22px;
-
-    &::after {
-      content: "";
-
-      position: absolute;
-      width: 56px;
-      height: 56px;
-
-      border-radius: 50%;
-      background-color: $form-grey;
-    }
+    margin-bottom: 59px;
   }
 
   &--checkbox {
@@ -69,11 +59,9 @@
 }
 
 .form__body {
-  width: 280px;
+  width: 100%;
   display: flex;
   margin-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
 
   &:last-child {
     margin-bottom: 25px;
@@ -129,7 +117,10 @@
 
   &--check {
     padding: 0;
-    padding-left: 60px;
+    padding-left: 100px;
+    @include title-style;
+    text-transform: none;
+    font-weight: bold;
   }
 }
 
@@ -157,28 +148,70 @@
     background-color: tomato;
   }
 
-  &--radio,
-  &--checkbox {
-    @include visually-hidden;
+  &--radio {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
   }
 
   &--radio::after {
     content: "";
+    position: absolute;
+    left: 20px;
+    top: -15px;
     width: 56px;
     height: 56px;
+    background-color: #e9e9e9;
+    border-radius: 50%;
+  }
 
+  &--radio:checked::before {
+    content: "";
     position: absolute;
-
-    background-color: tomato;
+    z-index: 2;
+    left: 38px;
+    top: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: #000000;
+    border-radius: 50%;
   }
-}
 
-.form__label {
-  &--check {
-    @include title-style;
-    text-transform: none;
-    font-weight: bold;
+  &--checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
   }
+
+  &--checkbox::after {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: -15px;
+    width: 56px;
+    height: 56px;
+    background-color: #e9e9e9;
+    border-radius: 3px;
+  }
+
+  &--checkbox:checked::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    left: 38px;
+    top: 3px;
+    width: 20px;
+    height: 20px;
+    background: no-repeat url(../../img/icon-tick.svg);
+    border-radius: 50%;
+  }
+
 }
 
 .form__textarea {
@@ -193,10 +226,6 @@
   padding-right: 20px;
 
   resize: none;
-}
-
-.form__textarea {
-
 }
 
 .form__footer {
