--- a/source/sass/form/form.scss
+++ b/source/sass/form/form.scss
@@ -1,16 +1,17 @@
 .form {
   margin: 0 auto;
-  margin-bottom: 75px;
+  margin-bottom: 43px;
   width: 320px;
 }
 
 .form__title {
   font-weight: 700;
   font-size: 18px;
-  margin-top: 58px;
+  margin-top: 63px;
 }
 
 .form__description {
+  margin-top: 28px;
   color: $dark-grey;
 }
 
@@ -32,10 +33,10 @@
 }
 
 .form__legent {
-  font-size: 21px;
+  font-size: 18px;
   font-weight: bold;
 
-  margin: 20px auto;
+  margin: 23px auto;
 }
 
 .form__list {
@@ -50,13 +51,13 @@
   margin: 0 auto;
 
   &--radio {
-    margin-top: 43px;
-    margin-bottom: 59px;
+    margin-top: 15px;
+    margin-bottom: 16px;
   }
 
   &--checkbox {
-    margin-top: 43px;
-    margin-bottom: 22px;
+    margin-top: 11px;
+    margin-bottom: 13px;
   }
 }
 
@@ -66,22 +67,37 @@
   margin-bottom: 20px;
 
   &:last-child {
-    margin-bottom: 25px;
+    margin-bottom: 27px;
   }
 
   &--contacts {
     flex-direction: column;
+    position: relative;
+  }
+
+  &--contacts::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+    width: 58px;
+    height: 58px;
+
+    background-color: #d4d4d4;
   }
 
   &--radio {
-    margin-bottom: 50px;
+    margin-bottom: 43px;
   }
 
   &--checkbox {
-    margin-bottom: 60px;
+    margin-bottom: 54px;
   }
 
   &--textarea {
+    width: 280px;
+    margin: 0 auto;
   }
 }
 
@@ -99,6 +115,32 @@
 
   &--contacts {
     padding-left: 22px;
+  }
+
+  &--tel::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    right: 0;
+
+    width: 58px;
+    height: 58px;
+
+    background: no-repeat url(../../img/icon-phone.svg) center;
+  }
+
+  &--email::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    right: 0;
+
+    width: 58px;
+    height: 58px;
+
+    background: no-repeat url(../../img/icon-mail.svg) center;
   }
 
   &--icon {
@@ -143,20 +185,9 @@
     padding-left: 22px;
   }
 
-  &--tel::after {
-    content: "";
-    width: 58px;
-    height: 58px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    background-color: tomato;
-  }
-
   &--radio {
     position: absolute;
+    left: 20px;
     width: 1px;
     height: 1px;
     margin: -1px;
@@ -167,7 +198,7 @@
   &--radio::after {
     content: "";
     position: absolute;
-    // left: 20px;
+    left: -18px;
     top: -15px;
     width: 56px;
     height: 56px;
@@ -179,7 +210,6 @@
     content: "";
     position: absolute;
     z-index: 2;
-    left: 18px;
     top: 3px;
     width: 20px;
     height: 20px;
@@ -226,8 +256,8 @@
   color: black;
 
   width: 100%;
-  height: 160px;
-  padding-top: 20px;
+  height: 137px;
+  padding-top: 11px;
   padding-left: 20px;
   padding-right: 20px;
 
@@ -262,25 +292,26 @@
 @media (min-width: $tablet-width) {
   .form {
     width: $tablet-width;
+    margin-bottom: 60px;
   }
 
   .form__title {
-    margin-top: 108px;
-    margin-bottom: 40px;
+    margin-top: 133px;
+    margin-bottom: 32px;
 
     font-size: 30px;
   }
 
   .form__description {
-    margin-left: 162px;
-    margin-right: 162px;
+    width: 440px;
+    margin: 0 auto;
   }
 
   .form__rewiew {
     display: flex;
     flex-wrap: wrap;
 
-    margin-top: 64px;
+    margin-top: 55px;
     width: 648px;
   }
 
@@ -289,20 +320,22 @@
     margin: 0 auto;
 
     &--radio {
+      margin-top: 20px;
+      padding-top: 0;
       order: -1;
       border-right: 1px solid $form-grey;
     }
 
     &--contacts {
-      margin-top: 75px;
+      margin-top: 50px;
     }
 
     &--checkbox {
-      margin-top: 58px;
+      margin-top: 37px;
     }
 
     &--textarea {
-      margin-top: 35px;
+      margin-top: 13px;
     }
 
     &--contacts,
@@ -319,6 +352,14 @@
       margin-bottom: 0;
     }
 
+    &--contacts {
+      margin-bottom: 25px;
+    }
+
+    &--radio {
+      margin-bottom: 53px;
+    }
+
     &--checkbox {
       width: 259px;
       margin-right: 0;
@@ -328,6 +369,17 @@
       width: 648px;
       height: 160px;
     }
+  }
+
+  .form__label {
+
+    &--check {
+      padding-left: 74px;
+    }
+    &--contacts {
+      margin-bottom: 5px;
+    }
+
   }
 
   .form__input {
@@ -341,6 +393,7 @@
   .form__legent {
     &--radio,
     &--name {
+      font-size: 21px;
       margin-top: 0;
       margin-left: 0;
     }
@@ -353,22 +406,14 @@
       display: block;
       width: 400px;
       margin: 0 auto;
-
-      ::after {
-        content: "";
-        height: 1px;
-        width: auto;
-
-        background-color: $dark-grey;
-      }
     }
 
     &--contacts {
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
 
     &--checkbox {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     &--textarea {
@@ -376,13 +421,22 @@
     }
   }
 
+  .form__textarea {
+    padding-top: 14px;
+    height: 140px;
+  }
+
   .form__list {
 
+    width: 520px;
+
     &--name {
-      margin-top: 25px;
+      margin-top: 35px;
+      width: 267px;
     }
 
     &--radio {
+      margin-top: 50px;
       margin-bottom: 0;
     }
 
@@ -390,23 +444,38 @@
       flex-direction: row;
       flex-wrap: wrap;
 
+      margin-top: 45px;
       margin-bottom: 0;
       margin-left: 95px;
+    }
+
+    &--contacts {
+      width: 100%;
+      margin-left: 0;
     }
   }
 
   .form__module {
 
     &--name {
-      margin-left: 38px;
+      margin-left: 55px;
+      width: 265px;
+    }
+
+    &--contacts {
+      width: 100%;
     }
 
     &--contacts,
     &--checkbox,
-    &--textarea,
-    & {
-      width: 648px;
+    &--textarea {
+      border-top: solid #e9e9e9 1px;
     }
+
+    &--checkbox {
+      width: 100%;
+    }
+
   }
 
   .form__footer {
@@ -414,7 +483,7 @@
     justify-content: space-between;
     align-items: center;
     margin-left: 0px;
-    margin-top: 68px;
+    margin-top: 56px;
     order: 6;
 
     width: 648px;
@@ -440,8 +509,17 @@
     width: $desktop-width;
   }
 
+  .form__title {
+    margin-top: 168px;
+  }
+
+  .form__description {
+    width: 440px;
+    margin: 0 auto;
+  }
+
   .form__rewiew {
-    margin-top: 64px;
+    margin-top: 39px;
     width: 960px;
   }
 
@@ -452,15 +530,15 @@
     }
 
     &--contacts {
-      margin-top: 75px;
+      margin-top: 48px;
     }
 
     &--checkbox {
-      margin-top: 58px;
+      margin-top: 7px;
     }
 
     &--textarea {
-      margin-top: 35px;
+      margin-top: 0;
     }
 
     &--contacts,
@@ -500,26 +578,31 @@
 
     &--check {
       padding: 0;
-      padding-left: 60px;
+      padding-left: 78px;
     }
   }
 
   .form__list {
     &--name {
-      margin-top: 25px;
+      width: 400px;
+      margin-top: 37px;
+      margin-left: 0;
     }
 
     &--radio {
+      margin-top: 75px;
       margin-bottom: 0;
     }
 
     &--contacts {
+      width: 100%;
       flex-direction: row;
       justify-content: space-between;
     }
 
     &--checkbox {
-      margin-top: 48px;
+      width: 100%;
+      margin-top: 37px;
       margin-bottom: 75;
       margin-left: 0;
     }
@@ -552,7 +635,7 @@
       flex-direction: row;
       margin-right: 0;
 
-      width: 50%;
+      width: 47%;
     }
 
     &--radio {
@@ -578,6 +661,7 @@
     }
 
     &--contacts {
+      margin-bottom: 75px;
     }
 
     &--checkbox {
